changing it with jetpack and some fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,8 +22,8 @@
     <string name="newsDesc3">Whether it’s Brad Keselowski leading almost every lap only to lose to Jimmie Johnson and not make the Championship 4 or a good old-fashioned donnybrook on pit road with a handful of playoff drivers, Texas Motor Speedway has been at the forefront of postseason theatrics since the inception of the current format in 2014.</string>
 
     <string name="about"><b>NASCAR Cup Series</b>\n\nIn a historic shift for the sport, beginning in 2020 NASCAR’s premier series became known as the NASCAR Cup Series and featured four cornerstone brands as Premier Partners: Busch Beer, Coca-Cola®, GEICO and Xfinity. All four partners are prominently featured in multiple platforms across the sport, including integrations in broadcast, NASCAR digital and social channels, event entitlements, in-market promotions and at-track activations.</string>
-    <string name="name_here">Name Here</string>
-    <string name="email_here">Email Here</string>
+    <string name="name">Yosri Elhadj</string>
+    <string name="email">yosri.elhadj@esprit.tn</string>
     <string name="info">Info</string>
     <string name="logout">Logout</string>
 
